--- a/jenkins.properties
+++ b/jenkins.properties
@@ -1,17 +1,10 @@
 app=pz-servicecontroller
 packaging=jar
-gitUrl=https://github.com/venicegeo/pz-servicecontroller
-mavenProject=piazza
-mavenRepo=Piazza
+gitUrl=https://github.com/venicegeo/dg-pz-servicecontroller
+mavenProject=coastline
+mavenRepo=coastline
 cfApi=https://api.devops.geointservices.io
-cfDomain=int.geointservices.io
-cfOrg=piazza
-cfSpace=int
+cfDomain=coastline.dg-cf-test.net
+cfOrg=coastline
+cfSpace=dev
 postmanFileKey=579f8660-01e6-4feb-8764-ec132432ebb1
-threadfixCredentialId=978C467A-2B26-47AE-AD2F-4AFD5A4AF695
-fortifySource=src/main/java/**/*.java
-sonarBinaries=target/classes
-sonarJacocoPath=target/jacoco.exec
-sonarLanguage=java
-sonarSources=src/main/java
-sonarTests=src/test/java
