Updated Jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,11 +5,6 @@ node {
   def mvn = tool 'M3'
   def root = pwd()
 
-  stage('Setup') {
-    git([
-      url: env.GIT_URL ? env.GIT_URL : 'https://github.com/venicegeo/dg-pz-servicecontroller',
-      branch: "master"
-    ])
   }
  stage('Build/Install Job Common') {
     git([
@@ -20,6 +15,7 @@ node {
       ${mvn}/bin/mvn clean install -U
     """
   }
+
   stage('Archive') {
     git([
       url: env.GIT_URL ? env.GIT_URL : 'https://github.com/venicegeo/dg-pz-servicecontroller',
@@ -52,11 +48,11 @@ node {
 
   stage('Staging Deploy') {
     cfPush {
-      cfDomain  = 'coastline.dg-cf-test.net'
+      cfDomain  = 'apps.sys.coastline.dg-cf-test.net'
       cfSpace   = 'stage'
     }
     cfBgDeploy {
-      cfDomain  = 'coastline.dg-cf-test.net'
+      cfDomain  = 'apps.sys.coastline.dg-cf-test.net'
       cfSpace   = 'stage'
     }
   }
