--- a/jenkins.properties
+++ b/jenkins.properties
@@ -1,10 +1,11 @@
 app=pz-servicecontroller
 packaging=jar
-gitUrl=https://github.com/venicegeo/dg-pz-servicecontroller
-mavenProject=coastline
-mavenRepo=coastline
-cfApi=https://api.devops.geointservices.io
-cfDomain=coastline.dg-cf-test.net
-cfOrg=coastline
-cfSpace=dev
+gitUrl=https://github.com/venicegeo/pz-dg-controller
+mavenProject=piazza
+mavenRepo=Piazza
+cfApi=https://apps.sys.coastline.dg-cf-test.net
+cfApi=https://apps.sys.coastline.dg-cf-test.net/
+cfDomain=apps.sys.coastline.dg-cf-test.net
+cfOrg=piazza
+cfSpace=int
 postmanFileKey=579f8660-01e6-4feb-8764-ec132432ebb1
