converting to new pipeline

--- a/jenkins.properties
+++ b/jenkins.properties
@@ -1,11 +1,12 @@
 app=pz-servicecontroller
 packaging=jar
-gitUrl=https://github.com/venicegeo/pz-dg-controller
-mavenProject=piazza
-mavenRepo=Piazza
-cfApi=https://apps.sys.coastline.dg-cf-test.net
-cfApi=https://apps.sys.coastline.dg-cf-test.net/
-cfDomain=apps.sys.coastline.dg-cf-test.net
-cfOrg=piazza
-cfSpace=int
+gitUrl=https://github.com/venicegeo/pz-dg-servicecontroller
+cfApi=https://api.sys.coastline.dg-cf-test.net
+cfDomain=apps.coastline.dg-cf-test.net
+cfOrg=radiant
+cfSpace=dev
+ldapCredentialId=pcf_user
+cfSkipSsl=true
 postmanFileKey=579f8660-01e6-4feb-8764-ec132432ebb1
+
+
