--- a/manifest.dev.yml
+++ b/manifest.dev.yml
@@ -2,8 +2,8 @@ applications:
 - name: pz-servicecontroller
   host: pz-servicecontroller
   path: pz-servicecontroller.jar
-  buildpack: java_buildpack
-  memory: 512M
+  buildpack: https://github.com/cloudfoundry/java-buildpack.git 
+  memory: 1024M
   instances: 1
   timeout: 80
   services:
@@ -12,3 +12,4 @@ applications:
     - pz-elasticsearch
   env:
     SPRING_PROFILES_ACTIVE: cloud
+    JBP_CONFIG_OPEN_JDK_JRE: '{ memory_calculator : { memory_sizes : { heap : 768 m } } }'
